# elm-pb-mri

./: .gitmodules  CMakeLists.txt  README.md
examples/: cbm18_dens8.grid_nx68ny64_diff.nc  check_nonlinear_status.py  restart.py
examples/Nami_data/: BOUT.inp
examples/crash/: BOUT.inp
examples/crash_filtered/: BOUT.inp
examples/data/: BOUT.inp
examples/nonlinear/: BOUT.inp
examples/nonlinear-highres/: BOUT.inp
include/: elmpb_build_config.hxx.in  revision.hxx.in
src/: elm_pb_mri.cxx
tests/: README.md
